# raugupatis-log

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT_SETUP.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
config/: default.toml  development.toml  production.toml
migrations/: 001_initial_schema.sql  002_add_sessions_table.sql  003_add_user_names.sql  004_add_user_locked_field.sql  005_add_profile_active_field.sql  006_add_preferred_temp_unit.sql  007_add_taste_profiles_and_lessons.sql
scripts/: deploy.sh  setup-dev.sh
src/: auth.rs  config.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  templates.rs
src/admin/: mod.rs
src/admin/profiles/: handlers.rs  mod.rs  models.rs  repository.rs  templates.rs
src/admin/users/: handlers.rs  mod.rs  models.rs  repository.rs  templates.rs
src/fermentation/: handlers.rs  mod.rs  models.rs  repository.rs  templates.rs
src/photos/: handlers.rs  mod.rs  models.rs  repository.rs
src/users/: auth.rs  handlers.rs  mod.rs  models.rs  repository.rs  temperature.rs  templates.rs
templates/: dashboard.html  home.html  register.html
templates/admin/profiles/: list.html
templates/admin/users/: list.html
templates/fermentation/: detail.html  edit.html  list.html  new.html
templates/users/: change_password.html  login.html  profile.html  register.html
tests/: admin_profiles.rs  admin_users.rs  fermentation.rs  general.rs  integration_tests.rs  photos.rs  users.rs
tests/common/: mod.rs
